--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -704,14 +704,24 @@ select {
   margin: 0px;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .ml-10 {
@@ -784,6 +794,10 @@ select {
 
 .w-auto {
   width: auto;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .-translate-x-32 {
@@ -929,13 +943,13 @@ select {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
-.from-slate-800 {
-  --tw-gradient-from: #1e293b;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(30 41 59 / 0));
+.from-slate-900 {
+  --tw-gradient-from: #0f172a;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(15 23 42 / 0));
 }
 
-.to-slate-600 {
-  --tw-gradient-to: #475569;
+.to-slate-700 {
+  --tw-gradient-to: #334155;
 }
 
 .bg-cover {
@@ -987,6 +1001,10 @@ select {
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-justify {
