--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -688,14 +688,6 @@ select {
   bottom: 0px;
 }
 
-.top-\[5px\] {
-  top: 5px;
-}
-
-.right-\[5px\] {
-  right: 5px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -712,11 +704,6 @@ select {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .mx-10 {
@@ -750,10 +737,6 @@ select {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
 }
 
 .mb-4 {
@@ -876,10 +859,6 @@ select {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -964,10 +943,6 @@ select {
   padding: 2.5rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -983,14 +958,14 @@ select {
   padding-bottom: 0.25rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-7 {
@@ -1001,10 +976,6 @@ select {
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .text-justify {
@@ -1118,6 +1089,18 @@ body {
   font-family: "Fredoka", sans-serif;
 }
 
+.card-container {
+  margin-top: 1.5rem;
+  display: grid;
+  justify-items: center;
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+  row-gap: 2.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+
 .card {
   position: relative;
   height: auto;
@@ -1165,6 +1148,7 @@ body {
 }
 
 .card > .card-description {
+  visibility: hidden;
   position: absolute;
   bottom: 0px;
   display: flex;
@@ -1310,6 +1294,10 @@ body {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.group:hover .group-hover\:visible {
+  visibility: visible;
 }
 
 .group:hover .group-hover\:h-1\/4 {
