--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -6,6 +6,11 @@ body {
   font-family: "Fredoka", sans-serif;
 }
 
+.card-container {
+  @apply grid px-2 mt-6 gap-x-5 gap-y-10 justify-items-center;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+
 .card {
   @apply flex-shrink-0 w-60 h-auto relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
 }
@@ -23,7 +28,7 @@ body {
 }
 
 .card > .card-description {
-  @apply absolute bottom-0 w-full rounded-b-md border-0 opacity-0 h-0 px-4 flex flex-col justify-center items-center bg-cyan-500 text-slate-200 uppercase text-sm transition-all ease-in-out text-center;
+  @apply absolute bottom-0 w-full rounded-b-md border-0 opacity-0 invisible h-0 px-4 flex flex-col justify-center items-center bg-cyan-500 text-slate-200 uppercase text-sm transition-all ease-in-out text-center;
 }
 
 .card > .card-adult-content-alert {
