--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -760,6 +760,10 @@ select {
   margin-bottom: 2.5rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -852,11 +856,6 @@ select {
 
 .gap-10 {
   gap: 2.5rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
 }
 
 .gap-y-10 {
