--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -12,7 +12,7 @@ body {
 }
 
 .card {
-  @apply flex-shrink-0 w-60 h-auto relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
+  @apply flex-shrink-0 w-60 h-auto max-w-full relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
 }
 
 .card.card-small {
