--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -705,12 +705,26 @@ select {
   bottom: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
 
-.m-0 {
-  margin: 0px;
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mx-2 {
@@ -728,8 +742,8 @@ select {
   margin-right: 2.5rem;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-10 {
@@ -744,12 +758,16 @@ select {
   margin-bottom: 1.25rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.ml-14 {
+  margin-left: 3.5rem;
 }
 
 .mb-4 {
@@ -867,8 +885,16 @@ select {
        column-gap: 1.5rem;
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .whitespace-pre-wrap {
@@ -1162,6 +1188,7 @@ body {
   position: relative;
   height: auto;
   width: 15rem;
+  max-width: 100%;
   flex-shrink: 0;
   border-radius: 0.375rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1391,9 +1418,29 @@ body {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .md\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+}
+
 @media (min-width: 1024px) {
-  .lg\:ml-14 {
+  .lg\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .lg\:mx-14 {
     margin-left: 3.5rem;
+    margin-right: 3.5rem;
   }
 
   .lg\:flex-row {
