--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -717,20 +717,12 @@ select {
   right: 1rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-1 {
   left: 0.25rem;
 }
 
 .z-10 {
   z-index: 10;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .mx-0 {
@@ -822,34 +814,8 @@ select {
   height: 5rem;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-fit {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-64 {
-  height: 16rem;
-}
-
-.h-36 {
-  height: 9rem;
-}
-
 .h-44 {
   height: 11rem;
-}
-
-.max-h-64 {
-  max-height: 16rem;
 }
 
 .min-h-screen {
@@ -880,32 +846,8 @@ select {
   width: 5rem;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
 .w-72 {
   width: 18rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-52 {
-  width: 13rem;
 }
 
 .flex-grow {
@@ -956,18 +898,6 @@ select {
 
 .gap-10 {
   gap: 2.5rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-y-10 {
@@ -1135,10 +1065,6 @@ select {
   padding-bottom: 5rem;
 }
 
-.pt-\[56\.25\%\] {
-  padding-top: 56.25%;
-}
-
 .text-justify {
   text-align: justify;
 }
@@ -1292,10 +1218,8 @@ body {
 
 .card {
   position: relative;
-  max-width: 100%;
   flex-shrink: 0;
   border-radius: 0.375rem;
-  background-size: cover;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1335,12 +1259,6 @@ body {
 .card.card-large {
   width: 296px;
   height: 444px;
-}
-
-.card > .card-background {
-  height: 100%;
-  width: 100%;
-  border-radius: 0.375rem;
 }
 
 .card > .card-description {
@@ -1397,6 +1315,10 @@ body {
   top: 0.25rem;
   right: 0.25rem;
   width: 50px;
+}
+
+.card > .card__image__bg {
+  border-radius: 0.375rem;
 }
 
 .btn {
@@ -1548,10 +1470,6 @@ body {
 
   .md\:ml-10 {
     margin-left: 2.5rem;
-  }
-
-  .md\:h-48 {
-    height: 12rem;
   }
 
   .md\:h-64 {
