--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -12,7 +12,7 @@ body {
 }
 
 .card {
-  @apply flex-shrink-0 bg-cover max-w-full relative rounded-md shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
+  @apply flex-shrink-0 rounded-md relative shadow-slate-700 shadow-lg transition-all duration-200 delay-100 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
   width: 224px;
   height: 336px;
 }
@@ -25,10 +25,6 @@ body {
 .card.card-large {
   width: 296px;
   height: 444px;
-}
-
-.card > .card-background {
-  @apply rounded-md w-full h-full;
 }
 
 .card > .card-description {
@@ -55,6 +51,10 @@ body {
 .card > .card-user-score {
   @apply absolute top-1 right-1;
   width: 50px;
+}
+
+.card > .card__image__bg {
+  @apply rounded-md;
 }
 
 .btn {
