--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -900,6 +900,10 @@ select {
   gap: 2.5rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-y-10 {
   row-gap: 2.5rem;
 }
@@ -1218,8 +1222,10 @@ body {
 
 .card {
   position: relative;
+  max-width: 100%;
   flex-shrink: 0;
   border-radius: 0.375rem;
+  background-size: cover;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1259,6 +1265,12 @@ body {
 .card.card-large {
   width: 296px;
   height: 444px;
+}
+
+.card > .card-background {
+  height: 100%;
+  width: 100%;
+  border-radius: 0.375rem;
 }
 
 .card > .card-description {
@@ -1315,10 +1327,6 @@ body {
   top: 0.25rem;
   right: 0.25rem;
   width: 50px;
-}
-
-.card > .card__image__bg {
-  border-radius: 0.375rem;
 }
 
 .btn {
