--- a/app/styles/tailwind_base.css
+++ b/app/styles/tailwind_base.css
@@ -8,12 +8,12 @@ body {
 }
 
 .card-container {
-  @apply grid px-2 mt-6 gap-x-5 gap-y-10 justify-items-center;
+  @apply grid px-6 mt-7 gap-6 justify-items-center;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
 
 .card {
-  @apply flex-shrink-0 rounded-md relative shadow-slate-700 shadow-lg transition-all duration-200 delay-75 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500;
+  @apply flex-shrink-0 rounded-md relative shadow-slate-700 shadow-lg transition-all duration-200 delay-75 ease-in-out hover:shadow-cyan-500 focus-visible:outline-none focus:shadow-cyan-500 hover:scale-125 focus:scale-125 z-0 hover:z-10 focus:z-10 hover:ring-2 focus:ring-2;
   width: 224px;
   height: 336px;
 }
