--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -725,6 +725,11 @@ select {
   z-index: 10;
 }
 
+.mx-px {
+  margin-left: 1px;
+  margin-right: 1px;
+}
+
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px;
@@ -790,6 +795,10 @@ select {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .hidden {
   display: none;
 }
@@ -800,6 +809,14 @@ select {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-1\.5 {
+  height: 0.375rem;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-8 {
@@ -818,6 +835,18 @@ select {
   height: 11rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -832,6 +861,14 @@ select {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\.5 {
+  width: 0.375rem;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .w-8 {
@@ -854,6 +891,14 @@ select {
   width: 18rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -870,6 +915,39 @@ select {
 .translate-x-16 {
   --tw-translate-x: 4rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0.2;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity:  0.2;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.2;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity:  0.2;
+  }
+}
+
+.animate-blink {
+  -webkit-animation: blink 1.4s infinite both;
+          animation: blink 1.4s infinite both;
 }
 
 .cursor-pointer {
@@ -898,6 +976,10 @@ select {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.gap-px {
+  gap: 1px;
 }
 
 .gap-6 {
@@ -1011,6 +1093,11 @@ select {
 
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 
 .bg-slate-600 {
@@ -1237,6 +1324,16 @@ select {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.animation-delay-200 {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+
+.animation-delay-\[400ms\] {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
 }
 
 body {
