--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -939,6 +939,18 @@ select {
   width: 100vw;
 }
 
+.w-52 {
+  width: 13rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
 .max-w-\[768px\] {
   max-width: 768px;
 }
